--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -111,6 +111,7 @@ The ~emms~ module enables ~Emacs~ to be used as a music player. The following co
 #+end_src
 
 *** ELLAMA
+The ~Emacs Large LAnguage Model Assistant (ELLAMA)~ module is used for interacting with large language models from Emacs.
 #+begin_src emacs-lisp :tangle "config.el"
 ;; Use-Package
 ;; (use-package ellama
@@ -612,7 +613,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        vc                ; version-control and Emacs, sitting in a tree
 
        :term
-       ;;eshell            ; the elisp shell that works everywhere
+       eshell            ; the elisp shell that works everywhere
        ;;shell             ; simple shell REPL for Emacs
        ;;term              ; basic terminal emulator for Emacs
        vterm             ; the best terminal emulation in Emacs
